Fixes broken video background on mobile

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -23,7 +23,7 @@
    z-index: 900;
  }
 
-#homepage_video {
+/*#homepage_video {
   position: absolute;
   right: 0;
   bottom: 0;
@@ -32,4 +32,4 @@
   width: auto;
   height: auto;
   z-index: -100;
-}
+}*/
